# py-pkgs-cookiecutter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  LICENSE  README.md  TODO.md  cookiecutter.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  tasks.py
.github/templates/code_coverage_report/: action.yml  post_comment.py
.github/workflows/: ci.yml  test.yml
docs/: Makefile  changelog.md  contributing.md  make.bat  requirements.txt  todo.md
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: conduct.rst.txt  index.rst.txt  quickstart.rst.txt
docs/source/: conduct.md  conf.py  features.rst  index.md  index.rst  quickstart.md  quickstart.rst  user-guide.md
docs/source/_static/: custom.css
docs/source/stubs/: features-stub.md  parameters-stub.md  quickstart-stub.md
docs/stubs/: features-stub.md  quickstart-stub.md
hooks/: post_gen_project.py  pre_gen_project.py
mypkg/: .pre-commit-config.yaml  .stignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.config.yaml  pyproject.toml  setup.cfg
mypkg/docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt
mypkg/tests/unit_tests/: test_cli.py  test_example.py
site/: 404.html  index.html  sitemap.xml
site/assets/javascripts/: bundle.5a2dcb6a.min.js
site/assets/javascripts/extra/: bundle.5f09fbc3.min.js
site/assets/javascripts/workers/: search.16e2a7d4.min.js
site/assets/stylesheets/: extra.0d2c79a8.min.css  extra.0d2c79a8.min.css.map  main.975780f9.min.css  main.975780f9.min.css.map  palette.2505c338.min.css  palette.2505c338.min.css.map
site/changelog/: index.html
site/conduct/: index.html
site/contributing/: index.html
site/recipes/authenticating-private-pypi-docker/: index.html
site/recipes/authenticating-with-private-pypi/: index.html
site/recipes/building-and-pushing-docker-containers/: index.html
site/recipes/orchestrating-flows-with-prefect2/: index.html
site/search/: search_index.json
site/stubs/features-stub/: index.html
site/stubs/parameters-stub/: index.html
site/stubs/quickstart-stub/: index.html
site/todo/: index.html
tests/: test_cookiecutter.py
{{ cookiecutter.__package_slug }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-entrypoint.sh  mkdocs.yml  mypy.ini  noxfile.py  okteto.yml  pyproject.toml  sync_with_poetry.json  tasks.py
{{ cookiecutter.__package_slug }}/.github/workflows/: ci-cd.yml  ci.yml  close-stale-issues.yml  codeql-analysis.yml  continuous-deployment.yml  continuous-integration.yml  docker-image-build.yml
{{ cookiecutter.__package_slug }}/.notebooks/: .gitkeep
{{ cookiecutter.__package_slug }}/.secrets/: .gitkeep
{{ cookiecutter.__package_slug }}/docs/: Makefile  conduct.md  conf.py  example.ipynb  index.md  make.bat  usage.ipynb  {{cookiecutter.__package_slug}}.md
{{ cookiecutter.__package_slug }}/docs/stubs/: parameters-stub.md
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/: __init__.py  cli.py  config.py  const.py  exceptions.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/commands/: config.py
{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_slug }}/steps/: example.py
{{ cookiecutter.__package_slug }}/tests/: conftest.py  test_command_config.py  test_example.py  test_load_config.py  test_{{ cookiecutter.__package_slug }}.py
{{ cookiecutter.__package_slug }}/tests/unit_tests/: test_cli.py  test_example.py
{{ cookiecutter.package_name.lower().replace(' ', '_').replace('-', '_') }}/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
{{ cookiecutter.package_name.lower().replace(' ', '_').replace('-', '_') }}/.github/workflows/: ci-cd.yml  ci.yml
{{ cookiecutter.package_name.lower().replace(' ', '_').replace('-', '_') }}/docs/: Makefile  conf.py  example.ipynb  make.bat
{{ cookiecutter.package_name.lower().replace(' ', '_').replace('-', '_') }}/src/{{cookiecutter.package_name}}/: __init__.py
{{ cookiecutter.package_name.lower().replace(' ', '_').replace('-', '_') }}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: ci-cd.yml  ci.yml
{{cookiecutter.package_name}}/docs/: Makefile  conf.py  example.ipynb
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/: .gitignore  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  README.md  cookiecutter.json  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  deploy.yml  release.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.ipynb  usage.rst
{{cookiecutter.project_slug}}/docs/source/: conduct.md  conf.py  index.md  index.rst  installation.md  installation.rst  usage.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
