[tool.poetry]
name = "mypkg"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Monty Python"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
pipeline = "mypkg.cli:pipeline"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
pydantic-yaml = "^0.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.990"
pre-commit = "^2.12.1"
pytest = "^7.0"
pytest-cov = "^2.11.1"
isort = "^5.10.1"
black = "^22.10.0"
myst-nb = "^0.15.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
ipykernel = "^6.15.1"
python-semantic-release = "^7.32.1"
ipykernel = "^6.15.1"
pytest-helpers-namespace = "^2021.12.29"

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | notebooks
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = ["notebooks"]

[tool.mypy]
exclude = "^notebooks/"
ignore_missing_imports = true

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version"
]
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
changelog_sections = "feature, build, refactor, style, test, fix, breaking, documentation, performance"
commit_message = "{version} [ci skip]"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
