[project]
authors = [{ name = "{{ cookiecutter.author_name }}" }]
description = "{{ cookiecutter.package_short_description }}"
license = { file = "LICENSE" }
name = "{{ cookiecutter.__package_slug }}"
readme = "README.md"
requires-python = "^{{ cookiecutter.python_version }}"
version = "{{ cookiecutter.package_version }}"

[dependency-groups]
dev = [
  "bandit",
  "mypy",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-cov",
  "python-semantic-release",
  "ruff",
]
docs = ["myst-parser", "sphinx-copybutton", "sphinx-prompt", "sphinx-rtd-theme"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.semantic_release]
branch = "main"                                   # branch to make releases of
build_command = "pip install uv && uv build"      # build dists
changelog_file = "CHANGELOG.md"                   # changelog file
version_toml = ["pyproject.toml:project.version"] # version location

[tool.coverage]
omit = ["examples/*", "tests/*"]
report.fail_under = 80
report.show_missing = true
report.skip_covered = true
run.branch = true
source = ["{{ cookiecutter.__package_slug }}"]

[tool.pytest]
ini_options.addopts = "--cov={{ cookiecutter.__package_slug }} --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
ini_options.testpaths = "tests"

[tool.ruff]
fix = true
format.docstring-code-format = true
format.docstring-code-line-length = "dynamic"
format.indent-style = "space"
format.line-ending = "auto"
format.preview = true
format.quote-style = "double"
format.skip-magic-trailing-comma = false
line-length = 100
lint.fixable = ["ALL"]
lint.ignore = ["COM812", "D203", "D213", "INP001", "ISC001"]
lint.per-file-ignores."tests/*" = ["S101"]
lint.pydocstyle.convention = "google"
lint.select = ["ALL"]
lint.unfixable = []

[tool.mypy]
disable_error_code = "import-untyped"
exclude = ["build", "out"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
