[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.package_short_description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
